configuration/default/ingress-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    chart: gateways
    heritage: Tiller
    release: istio
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        chart: gateways
        heritage: Tiller
        release: istio
        app: istio-ingressgateway
        istio: ingressgateway
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
#      serviceAccountName: istio-ingressgateway-service-account
      containers:
      - name: istio-proxy
        image: "gcr.io/istio-release/proxyv2:release-1.3-latest-daily"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 15020
        - containerPort: 80
        - containerPort: 443
        - containerPort: 31400
        - containerPort: 15029
        - containerPort: 15030
        - containerPort: 15031
        - containerPort: 15032
        - containerPort: 15443
        - containerPort: 15090
          protocol: TCP
          name: http-envoy-prom
        args:
        - proxy
        - router
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --log_output_level=default:info
        - --drainDuration
        - '45s' #drainDuration
        - --parentShutdownDuration
        - '1m0s' #parentShutdownDuration
        - --connectTimeout
        - '10s' #connectTimeout
        - --serviceCluster
        - istio-ingressgateway
#        - --zipkinAddress
#        - zipkin:9411
        - --proxyAdminPort
        - "15000"
        - --statusPort
        - "15020"
        - --controlPlaneAuthPolicy
        - NONE
        - --discoveryAddress
#        - istio-pilot:15010
        - 172.31.71.181:15010
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15020
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 2000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi

        volumeMounts:
#        - name: istio-certs
#          mountPath: /etc/certs
#          readOnly: true
        - name: ingressgateway-certs
          mountPath: "/etc/istio/ingressgateway-certs"
          readOnly: true
        - name: ingressgateway-ca-certs
          mountPath: "/etc/istio/ingressgateway-ca-certs"
          readOnly: true
      volumes:
#      - name: istio-certs
#        secret:
##          secretName: istio.istio-ingressgateway-service-account
##          optional: true
      - name: ingressgateway-certs
        secret:
          secretName: "istio-ingressgateway-certs"
          optional: true
      - name: ingressgateway-ca-certs
        secret:
          secretName: "istio-ingressgateway-ca-certs"
          optional: true
#      affinity:
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#            - matchExpressions:
#              - key: beta.kubernetes.io/arch
#                operator: In
#                values:
#                - "amd64"
#                - "ppc64le"
#                - "s390x"
#          preferredDuringSchedulingIgnoredDuringExecution:
#          - weight: 2
#            preference:
#              matchExpressions:
#              - key: beta.kubernetes.io/arch
#                operator: In
#                values:
#                - "amd64"
#          - weight: 2
#            preference:
#              matchExpressions:
#              - key: beta.kubernetes.io/arch
#                operator: In
#                values:
#                - "ppc64le"
#          - weight: 2
#            preference:
#              matchExpressions:
#              - key: beta.kubernetes.io/arch
#                operator: In
#                values:
#                - "s390x"
---

apiVersion: v1
kind: Service
metadata:
  name: istio-policy
  namespace: istio-system
  annotations:
    networking.istio.io/exportTo: "*"
  labels:
    app: mixer
    chart: mixer
    heritage: Tiller
    release: istio
    istio: mixer
spec:
  ports:
  - name: grpc-mixer
    port: 9091
  - name: grpc-mixer-mtls
    port: 15004
  - name: http-monitoring
    port: 15014
  selector:
    istio: mixer
    istio-mixer-type: policy
---
apiVersion: v1
kind: Service
metadata:
  name: istio-telemetry
  namespace: istio-system
  annotations:
    networking.istio.io/exportTo: "*"
  labels:
    app: mixer
    chart: mixer
    heritage: Tiller
    release: istio
    istio: mixer
spec:
  ports:
  - name: grpc-mixer
    port: 9091
  - name: grpc-mixer-mtls
    port: 15004
  - name: http-monitoring
    port: 15014
  - name: prometheus
    port: 42422
  selector:
    istio: mixer
    istio-mixer-type: telemetry
